--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
 version: "3"
 services:
-  note-app:
-    container_name: shopify-app-c
+  shopify-app:
+    container_name: shopify-app
     image: "eu.gcr.io/chefclub-158403/shopify-app:dev"
     ports:
       - "3000:3000"
     environment:
       - SHOPIFY_APP_PORT=3000
-    volumes:
-      - .:/app
-    command: node bin/test.js
